fix nav bar width and icons gap on nav bar

--- a/src/style/components/_NavigationBar.sass
+++ b/src/style/components/_NavigationBar.sass
@@ -18,8 +18,10 @@
         color: $color-text-tertiary
     
     .right-items
+        max-width: 90px
         display: grid
         grid-template-columns: 1fr 1fr
+        align-items: center
 
 
 
