--- a/src/style/components/_SearchBar.sass
+++ b/src/style/components/_SearchBar.sass
@@ -23,13 +23,11 @@
         
         &:hover
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px
-            width: 100%
+            width: 40vw
 
 @media (min-width:$media-larger-phablet) 
     .search-bar input
         width: 200px
-        &:hover
-            width: 300px
 
 @media (max-width:$media-small-mobile) 
     .search-bar 
@@ -39,7 +37,7 @@
         input
             width: 50%
             &:hover
-                width: 100px
+                max-width: 100px
 
                 
 
